--- a/resumes/generic/pratik_bhagwat.tex
+++ b/resumes/generic/pratik_bhagwat.tex
@@ -23,17 +23,17 @@
 
 \section*{\textbf{WORK EXPERIENCE}}
 
-\noindent\textbf{Software Engineer – Coupang (AI and Data Platform)} (Jan 2021 - Present) (Seattle, Washington)
+\noindent\textbf{Software Engineer – Coupang (AI and Data Platform)} (Jan 2022 - Present) (Seattle, Washington)
 \begin{itemize}[noitemsep, topsep=0pt]
-    \item Designed, implemented, and launched an organization-wide analytics notebook platform for 4500+ monthly active users.
+    \item Designed, implemented, and launched an organization-wide analytics notebook platform for 4500+ monthly active users. Utilized the frameworks like React.js for UI and Django Admin as BFF.
     \item Enhanced the Apache Zeppelin open-source project with heavy query handling capacity for Presto and Livy Spark workloads. Additionally added version control features, facilitating more than 50,000 daily active jobs.
-    \item Improved the Customer Experience Analytics platform by introducing functionalities to the Funnel, Journey, and Trend analysis sections, catering to over 100 monthly active users.
+    \item Improved the Customer Experience Analytics platform by introducing functionalities to the Funnel, Journey, and Trend analysis sections, leveraging Scala and Spark, and catering to over 100 monthly active users.
     \item Engineered a top line metrics report by building data pipelines to collect usage and system metrics for BI tools like Superset, Redash, Zeppelin, and Tableau.
 \end{itemize}
 
 \noindent\textbf{Software Engineering Intern – Coupang} (May 2021 - Aug 2021)  (Seattle, Washington)
 \begin{itemize}[noitemsep, topsep=0pt]
-    \item Designed, built, and delivered a UI application for the Funnel and Journey analysis in Customer Experience Analytics Platform.
+    \item Designed, built, and delivered a UI application for the Funnel and Journey analysis in Customer Experience Analytics Platform. Used technologies like Vue.js, Typescript, Springboot for BFF.
     \item Expanded the set of APIs required by the frontend in an existing Spring Boot application.
 \end{itemize}
 
@@ -46,7 +46,7 @@
 
 \section*{\textbf{TECHNICAL SKILLS}}
 \begin{itemize}[noitemsep, topsep=0pt]
-    \item \textbf{Programming Languages}: Java, Golang, Python, Scala, JavaScript, C, C++, SAP ABAP, SQL
+    \item \textbf{Programming Languages}: Java, Golang, Python, Scala, JavaScript, TypeScript, C, C++, SAP ABAP, SQL
     \item \textbf{Cloud Stack}: AWS (EKS, EC2, S3, EFS, IAM)
     \item \textbf{Infra Stack}: Kubernetes, Docker, Terraform, CloudFormation, Ingress
     \item \textbf{Tools and Web Stack}: React.js, Vue.js, Node.js, Express.js, Spring Boot, Form Calc, HTML, CSS, Git
